Added Socket Connection

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
       }
     </style>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script defer src="/static/game.js"></script>
+    <script defer src="game.js"></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
