--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,10 @@
 <html>
   <head>
     <title>A Multiplayer Game</title>
-    <style>
-      canvas {
-        width: 800px;
-        height: 600px;
-        border: 5px solid black;
-      }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script defer src="game.js"></script>
+    <script defer src="./js/obj/player.js"></script>
+    <script defer src="./js/game.js"></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
