Fixed Constructor Bug

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>A Multiplayer Game</title>
+    <title>OT Reach</title>
     <link rel="stylesheet" href="css/styles.css">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script defer src="./js/obj/player.js"></script>
+    <script defer src="./js/player.js"></script>
     <script defer src="./js/game.js"></script>
   </head>
   <body>
